<?php

namespace App\Entity;

use ApiPlatform\Metadata\ApiResource;
use App\Entity\Trait\CreatedAtTrait;
use App\Entity\Trait\SlugTrait;
use App\Repository\ProduitsRepository;
use Doctrine\Common\Collections\ArrayCollection;
use Doctrine\Common\Collections\Collection;
use Doctrine\DBAL\Types\Types;
use Doctrine\ORM\Mapping as ORM;
use Symfony\Component\Serializer\Attribute\Groups;


#[ORM\Entity(repositoryClass: ProduitsRepository::class)]
#[ApiResource(normalizationContext: ['groups' => ['read:produit']])]

class Produits
{
    use CreatedAtTrait;
    use SlugTrait;

    #[ORM\Id]
    #[ORM\GeneratedValue]
    #[ORM\Column]
    #[Groups(['read:produit', 'read:category'])]
    private ?int $id = null;

    #[ORM\Column(length: 100)]
    #[Groups(['read:produit', 'read:category'])]
    private ?string $nom = null;

    #[ORM\Column(type: Types::TEXT)]
    #[Groups(['read:produit'])]
    private ?string $description = null;

    #[ORM\Column]
    #[Groups(['read:produit'])]
    private ?int $prix = null;

    #[ORM\Column]
    #[Groups(['read:produit',])]
    private ?int $stock = null;


    #[ORM\Column(length: 100)]
    #[Groups(['read:produit',])]
    private ?string $reference_fournisseur = null;

    #[ORM\Column(length: 255)]
    #[Groups(['read:produit',])]
    private ?string $image = null;

    #[ORM\ManyToOne(inversedBy: 'produits')]
    #[ORM\JoinColumn(nullable: false)]
    #[Groups(['read:produit',])]
    private ?Categories $categories = null;

    #[ORM\ManyToOne(inversedBy: 'produits')]
    #[ORM\JoinColumn(nullable: false)]
    private ?Fournisseur $fournisseur = null;

    /**
     * @var Collection<int, DetailsLivraison>
     */
    #[ORM\OneToMany(targetEntity: DetailsLivraison::class, mappedBy: 'produits')]
    private Collection $detailsLivraisons;

    /**
     * @var Collection<int, DetailsCommande>
     */
    #[ORM\OneToMany(targetEntity: DetailsCommande::class, mappedBy: 'produits')]
    private Collection $detailsCommandes;

    public function __construct()
    {
        $this->detailsLivraisons = new ArrayCollection();
        $this->detailsCommandes = new ArrayCollection();
        $this->created_at = new \DateTimeImmutable();
    }

    public function getId(): ?int
    {
        return $this->id;
    }

    public function getNom(): ?string
    {
        return $this->nom;
    }

    public function setNom(string $nom): static
    {
        $this->nom = $nom;

        return $this;
    }

    public function getDescription(): ?string
    {
        return $this->description;
    }

    public function setDescription(string $description): static
    {
        $this->description = $description;

        return $this;
    }

    public function getPrix(): ?int
    {
        return $this->prix;
    }

    public function setPrix(int $prix): static
    {
        $this->prix = $prix;

        return $this;
    }

    public function getStock(): ?int
    {
        return $this->stock;
    }

    public function setStock(int $stock): static
    {
        $this->stock = $stock;

        return $this;
    }


    public function getReferenceFournisseur(): ?string
    {
        return $this->reference_fournisseur;
    }

    public function setReferenceFournisseur(string $reference_fournisseur): static
    {
        $this->reference_fournisseur = $reference_fournisseur;

        return $this;
    }

    public function getImage(): ?string
    {
        return $this->image;
    }

    public function setImage(string $image): static
    {
        $this->image = $image;

        return $this;
    }

    public function getCategories(): ?Categories
    {
        return $this->categories;
    }

    public function setCategories(?Categories $categories): static
    {
        $this->categories = $categories;

        return $this;
    }

    public function getFournisseur(): ?Fournisseur
    {
        return $this->fournisseur;
    }

    public function setFournisseur(?Fournisseur $fournisseur): static
    {
        $this->fournisseur = $fournisseur;

        return $this;
    }

    /**
     * @return Collection<int, DetailsLivraison>
     */
    public function getDetailsLivraisons(): Collection
    {
        return $this->detailsLivraisons;
    }

    public function addDetailsLivraison(DetailsLivraison $detailsLivraison): static
    {
        if (!$this->detailsLivraisons->contains($detailsLivraison)) {
            $this->detailsLivraisons->add($detailsLivraison);
            $detailsLivraison->setProduits($this);
        }

        return $this;
    }

    public function removeDetailsLivraison(DetailsLivraison $detailsLivraison): static
    {
        if ($this->detailsLivraisons->removeElement($detailsLivraison)) {
            // set the owning side to null (unless already changed)
            if ($detailsLivraison->getProduits() === $this) {
                $detailsLivraison->setProduits(null);
            }
        }

        return $this;
    }

    /**
     * @return Collection<int, DetailsCommande>
     */
    public function getDetailsCommandes(): Collection
    {
        return $this->detailsCommandes;
    }

    public function addDetailsCommande(DetailsCommande $detailsCommande): static
    {
        if (!$this->detailsCommandes->contains($detailsCommande)) {
            $this->detailsCommandes->add($detailsCommande);
            $detailsCommande->setProduits($this);
        }

        return $this;
    }

    public function removeDetailsCommande(DetailsCommande $detailsCommande): static
    {
        if ($this->detailsCommandes->removeElement($detailsCommande)) {
            // set the owning side to null (unless already changed)
            if ($detailsCommande->getProduits() === $this) {
                $detailsCommande->setProduits(null);
            }
        }

        return $this;
    }
}
